--- a/css/styles.css
+++ b/css/styles.css
@@ -575,7 +575,9 @@ img {
     min-height: 584px;
     border-radius: 4px;
     background: #FCFCFC;
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
+    display: flex;
+    flex-direction: column;
 }
 
 .close-button {
@@ -589,14 +591,117 @@ img {
     height: 24px;
     padding: 8px;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .close-icon {
     fill: #2E2F42;
 }
 
+.modal-title {
+    margin-bottom: 16px;
+    color: #2E2F42;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.modal-field {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 8px;
+}
+
+.modal-label {
+color: #8E8F99;
+font-size: 12px;
+font-weight: 400;
+line-height: 1.16;
+letter-spacing: 0.04em;
+margin-bottom: 4px;
+}
+
 .modal-input {
     width: auto;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    padding-left: 38px;
+}
+
+.modal-input:focus {
+    outline: none;
+    border: 1px solid #4D5AE5;
+}
+
+.modal-textarea {
+    min-height: 120px;
+    width: auto;
+    margin-bottom: 16px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    display: block;
+    padding-left: 16px;
+}
+
+.modal-textarea:focus {
+    outline: none;
+    border: 1px solid #4D5AE5;
+}
+
+.modal-textarea::placeholder {
+    color: #2E2F4266;
+font-size: 12px;
+font-weight: 400;
+line-height: 1.16;
+letter-spacing: 0.04em;
+}
+
+.modal-checkbox-wrap {
+    display: flex;
+    gap: 8px;
+    margin-bottom: 24px;
+}
+
+.modal-checkbox-text {
+    color: #8E8F99;
+font-size: 12px;
+font-weight: 400;
+line-height: 1.16;
+letter-spacing: 0.04em;
+}
+
+.modal-checkbox-link {
+    color: var(--IRIS, #4D5AE5);
+font-size: 12px;
+font-weight: 400;
+line-height: 1.16;
+letter-spacing: 0.04em;
+text-decoration-line: underline;
+}
+
+.send-button {
+    display: block;
+    background-color: #4D5AE5;
+    color: #fff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-transform: capitalize;
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 16px 32px;
+    margin: 0 auto;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    box-shadow: 0px 4px 4px 0px #00000026;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.send-button:hover,
+.send-button:focus {
+    background-color: #404BBF;
 }
