--- a/css/styles.css
+++ b/css/styles.css
@@ -555,6 +555,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 80px;
 }
 
 .is-open {
@@ -571,13 +572,19 @@ img {
 
 .modal {
     position: relative;
-    width: 408px;
-    min-height: 584px;
+
+    width: 100%;
+    max-width: 408px;
+    height: 100%;
+    max-height: 584px;
+    overflow-y: auto;
+
     border-radius: 4px;
     background: #FCFCFC;
     padding: 72px 24px 24px 24px;
     display: flex;
     flex-direction: column;
+    
 }
 
 .close-button {
@@ -585,16 +592,28 @@ img {
     top: 24px;
     right: 24px;
     background-color: #E7E9FC;
-    border: #0000001A;
+    border: 1px solid rgba(0, 0, 0, 0.10);
     border-radius: 50%;
     width: 24px;
     height: 24px;
     padding: 8px;
     display: flex;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-icon {
     fill: #2E2F42;
+}
+
+.close-button:hover,
+.close-button:focus {
+    background-color: #404BBF;
+    border: none;
+    cursor: pointer;
+}
+
+.close-button:hover .close-icon {
+    fill: #FFF;
 }
 
 .modal-title {
@@ -622,17 +641,34 @@ letter-spacing: 0.04em;
 margin-bottom: 4px;
 }
 
+.modal-input-wrap {
+    position: relative;
+}
+
+.input-icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    fill: #2E2F42;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-input {
-    width: auto;
     height: 40px;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     padding-left: 38px;
+    width: 100%;
 }
 
 .modal-input:focus {
     outline: none;
     border: 1px solid #4D5AE5;
+}
+
+.modal-input:focus + .input-icon {
+    fill: #4D5AE5;
 }
 
 .modal-textarea {
@@ -643,6 +679,7 @@ margin-bottom: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     display: block;
     padding-left: 16px;
+    resize: none;
 }
 
 .modal-textarea:focus {
@@ -664,21 +701,37 @@ letter-spacing: 0.04em;
     margin-bottom: 24px;
 }
 
+.checkbox-check {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    border-radius: 2px;
+}
+
+.checkbox-icon {
+    opacity: 0;
+}
+
+.modal-checkbox-input:checked + .checkbox-check .checkbox-icon {
+    opacity: 1;
+}
+
 .modal-checkbox-text {
     color: #8E8F99;
-font-size: 12px;
-font-weight: 400;
-line-height: 1.16;
-letter-spacing: 0.04em;
+    font-size: 12px; 
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
 }
 
 .modal-checkbox-link {
-    color: var(--IRIS, #4D5AE5);
-font-size: 12px;
-font-weight: 400;
-line-height: 1.16;
-letter-spacing: 0.04em;
-text-decoration-line: underline;
+    color: #4D5AE5;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    text-decoration-line: underline;
 }
 
 .send-button {
