--- a/css/styles.css
+++ b/css/styles.css
@@ -210,9 +210,9 @@ img {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover,
-.button:active,
-.button:focus {
+.hero-button:hover,
+.hero-button:active,
+.hero-button:focus {
     background-color: #404BBF;
 }
 
@@ -506,6 +506,10 @@ img {
     max-width: 264px;
 }
 
+.footer-links-container {
+    margin-right: 80px;
+}
+
 .footer-title {
     color: #FFFFFF;
         font-size: 16px;
@@ -546,6 +550,63 @@ img {
     fill: #F4F4FD;
 }
 
+.footer-input-wrap {
+    display: flex;
+}
+
+.footer-input {
+    margin-right: 24px;
+    padding: 8px 16px;
+    width: 264px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid  #FFF;
+    color: #fff;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background-color: #2E2F42;
+}
+
+.footer-input::placeholder {
+    color: #FFF;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.04em;
+}
+
+.footer-button {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: none;
+    width: 165px;
+    padding: 8px 24px;
+    color: #FFF;
+    text-align: center;
+    cursor: pointer;
+}
+
+.footer-button:hover,
+.footer-button:active,
+.footer-button:focus {
+    background-color: #404BBF;
+}
+
+.footer-button-text {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+}
+
+.footer-icon {
+    fill: #FFFFFF;
+}
+
 /* Modal */
 
 .backdrop {
@@ -556,18 +617,15 @@ img {
     justify-content: center;
     align-items: center;
     padding: 80px;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
 
 .is-open {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
-}
-
-.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
 }
 
 .modal {
