--- a/css/styles.css
+++ b/css/styles.css
@@ -552,39 +552,40 @@ img {
 
 .footer-input-wrap {
     display: flex;
+    gap: 24px;
 }
 
 .footer-input {
-    margin-right: 24px;
-    padding: 8px 16px;
+    padding-left: 16px;
     width: 264px;
     height: 40px;
     border-radius: 4px;
     border: 1px solid  #FFF;
     color: #fff;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    background-color: #2E2F42;
+    background-color: transparent;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
 }
 
 .footer-input::placeholder {
     color: #FFF;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 2;
-    letter-spacing: 0.04em;
 }
 
 .footer-button {
     display: flex;
-    gap: 16px;
     justify-content: center;
     align-items: center;
     border-radius: 4px;
     background-color: #4D5AE5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: none;
-    width: 165px;
+    min-width: 165px;
+    height: 40px;
     padding: 8px 24px;
+    font-family: "Roboto", sans-serif;
     color: #FFF;
     text-align: center;
     cursor: pointer;
@@ -603,6 +604,7 @@ img {
 
 .footer-icon {
     fill: #FFFFFF;
+    margin-left: 16px;
 }
 
 /* Modal */
@@ -618,6 +620,7 @@ img {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .is-open {
@@ -627,14 +630,17 @@ img {
 }
 
 .modal {
-    position: relative;
+    position: absolute;
 
-    width: 100%;
-    max-width: 408px;
-    height: 100%;
-    max-height: 584px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 408px;
+    min-height: 584px;
     overflow-y: auto;
 
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);;
     border-radius: 4px;
     background: #FCFCFC;
     padding: 72px 24px 24px 24px;
@@ -654,11 +660,17 @@ img {
     height: 24px;
     padding: 8px;
     display: flex;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    padding: 0;
 }
 
 .close-icon {
-    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-button:hover,
@@ -672,6 +684,11 @@ img {
 .close-button:hover .close-icon {
     fill: #FFF;
 }
+
+.close-button:focus .close-icon {
+    fill: #FFF;
+}
+
 
 .modal-title {
     margin-bottom: 16px;
@@ -690,6 +707,7 @@ img {
 }
 
 .modal-label {
+    display: block;
 color: #8E8F99;
 font-size: 12px;
 font-weight: 400;
@@ -708,7 +726,7 @@ margin-bottom: 4px;
     top: 50%;
     transform: translateY(-50%);
     fill: #2E2F42;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .modal-input {
@@ -717,6 +735,9 @@ margin-bottom: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     padding-left: 38px;
     width: 100%;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
