--- a/css/styles.css
+++ b/css/styles.css
@@ -568,6 +568,7 @@ img {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
 .footer-input::placeholder {
@@ -706,12 +707,16 @@ img {
     margin-bottom: 8px;
 }
 
+.modal-field-textarea {
+    margin-bottom: 16px  
+}
+
 .modal-label {
     display: block;
 color: #8E8F99;
 font-size: 12px;
 font-weight: 400;
-line-height: 1.16;
+line-height: 1.17; 
 letter-spacing: 0.04em;
 margin-bottom: 4px;
 }
@@ -750,27 +755,27 @@ margin-bottom: 4px;
 }
 
 .modal-textarea {
-    min-height: 120px;
-    width: auto;
+    height: 120px;
+    width: 100%;
     margin-bottom: 16px;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     display: block;
-    padding-left: 16px;
+    padding: 8px 16px;
     resize: none;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .modal-textarea:focus {
     outline: none;
     border: 1px solid #4D5AE5;
-}
-
-.modal-textarea::placeholder {
-    color: #2E2F4266;
-font-size: 12px;
-font-weight: 400;
-line-height: 1.16;
-letter-spacing: 0.04em;
 }
 
 .modal-checkbox-wrap {
@@ -780,26 +785,33 @@ letter-spacing: 0.04em;
 }
 
 .checkbox-check {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: transparent; 
 }
 
 .checkbox-icon {
     opacity: 0;
 }
 
-.modal-checkbox-input:checked + .checkbox-check .checkbox-icon {
-    opacity: 1;
+.modal-checkbox-input:checked + .checkbox-check {
+    background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;
+    /* opacity: 1; */
 }
 
-.modal-checkbox-text {
+.modal-checkbox-label {
     color: #8E8F99;
     font-size: 12px; 
-    font-style: normal;
     font-weight: 400;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.04em;
 }
 
