--- a/css/styles.css
+++ b/css/styles.css
@@ -770,7 +770,7 @@ margin-bottom: 4px;
     color: rgba(46, 47, 66, 0.4);
     background-color: transparent;
     outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea:focus {
@@ -778,7 +778,7 @@ margin-bottom: 4px;
     border: 1px solid #4D5AE5;
 }
 
-.modal-checkbox-wrap {
+.modal-field-checkbox {
     display: flex;
     gap: 8px;
     margin-bottom: 24px;
@@ -794,17 +794,13 @@ margin-bottom: 4px;
     border-radius: 2px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: transparent; 
+    margin-right: 8px;
 }
 
-.checkbox-icon {
-    opacity: 0;
-}
-
-.modal-checkbox-input:checked + .checkbox-check {
+.modal-checkbox-input:checked + .modal-checkbox-label .checkbox-check {
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
-    /* opacity: 1; */
 }
 
 .modal-checkbox-label {
